code/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code
  namespace: olehalv
spec:
  type: ClusterIP
  selector:
    app: code
  ports:
    - name: web
      port: 80
      targetPort: http
