code/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: code
  namespace: olehalv
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - code-olehalv.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: code
          port: 80
